--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div id="overlay-light"></div>
+    <div id="overlay-dark"></div>
+    <div class="content">
+      <div class="nav row">
+        <div class="col"><a href="https://irxd.github.io">back to main site</a></div>
+      </div>
+      <div class="divider nav-divider"></div>
+      <div class="row">
+        <div class="col"><a href="https://irxd.github.io">Sample link ⟶</a></div>
+      </div>
+      <div class="divider"></div>
+    </div>
   </body>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js">
+  </script>
+  <script type="module" src="/main.js"></script>
 </html>
