feat: add font for back link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <div class="col"><a href="https://irxd.github.io">Sample link ⟶</a></div>
       </div>
       <div class="divider"></div>
+      <div class="row">
+        <div class="col"><a href="https://irxd.github.io">Sample link ⟶</a></div>
+      </div>
+      <div class="divider"></div>
     </div>
   </body>
   <script
