feat: add scroll gallery

--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
       </div>
       <div class="divider nav-divider"></div>
       <div class="row">
-        <div class="col"><a href="https://irxd.github.io">Sample link ⟶</a></div>
-      </div>
-      <div class="divider"></div>
-      <div class="row">
-        <div class="col"><a href="https://irxd.github.io">Sample link ⟶</a></div>
+        <div class="col"><a href="https://irxd.github.io/experiment/scroll-gallery/">Scroll Gallery ⟶</a></div>
       </div>
       <div class="divider"></div>
     </div>
