feat: add content identifier

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="divider nav-divider"></div>
       <div class="row">
         <div class="col"><a href="https://irxd.github.io/experiment/scroll-gallery/">Scroll Gallery ⟶</a></div>
+        <div class="col">desktop</div>
       </div>
       <div class="divider"></div>
     </div>
