--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
       <div class="divider nav-divider"></div>
       <div class="row">
-        <div class="col"><a href="https://irxd.github.io/experiment/scroll-gallery/">Scroll Gallery ⟶</a></div>
-        <div class="col">desktop</div>
+        <div class="col"><a href="https://irxd.github.io/flappy-circle/">Flappy Circle ⟶</a></div>
+        <div class="col">desktop & mobile</div>
       </div>
       <div class="divider"></div>
     </div>
