feat: add projects and adjust content padding

--- a/index.html
+++ b/index.html
@@ -11,12 +11,187 @@
     <div id="overlay-dark"></div>
     <div class="content">
       <div class="nav row">
-        <div class="col"><a href="https://irxd.github.io">back to main site</a></div>
+        <div class="col"><a href="https://irxd.github.io">back to main site ⟶</a></div>
       </div>
       <div class="divider nav-divider"></div>
       <div class="row">
-        <div class="col"><a href="https://irxd.github.io/flappy-circle/">Flappy Circle ⟶</a></div>
-        <div class="col">desktop & mobile</div>
+        <div class="col">
+          <div>Bisafrontend</div>
+          <div class="desc">Learning blog bisafrontend.com</div>
+        </div>
+        <div class="col">
+          <div>2023 | Personal</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>MSUTech Dashboard</div>
+          <div class="desc">CMS for MSU certificate management</div>
+        </div>
+        <div class="col">
+          <div>2023 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Treasury Management System</div>
+          <div class="desc">CMS for OSK Holdings Malaysia</div>
+        </div>
+        <div class="col">
+          <div>2023 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Eklas App</div>
+          <div class="desc">E-learning app for MSU Malaysia Campus</div>
+        </div>
+        <div class="col">
+          <div>2023 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Viona</div>
+          <div class="desc">Compliance management system for paireds.com</div>
+        </div>
+        <div class="col">
+          <div>2023 | Freelance</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Suara Pembaruan CMS</div>
+          <div class="desc">CMS for suarapembaruan.com</div>
+        </div>
+        <div class="col">
+          <div>2023 | Freelance</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Suara Pembaruan</div>
+          <div class="desc">News website for Linknet subsidiary</div>
+        </div>
+        <div class="col">
+          <div>2023 | Freelance</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Middleware Dashboard</div>
+          <div class="desc">Dashboard for middleware service warungpintar.co.id</div>
+        </div>
+        <div class="col">
+          <div>2022 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Renceng Native</div>
+          <div class="desc">React Native UI Kit for aplikasi warung pintar warungpintar.co.id</div>
+        </div>
+        <div class="col">
+          <div>2022 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Sales Pintar App</div>
+          <div class="desc">PWA for trader sales warungpintar.co.id</div>
+        </div>
+        <div class="col">
+          <div>2021 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Iklan Pintar Website</div>
+          <div class="desc">Marketing website for iklan pintar warungpintar.co.id</div>
+        </div>
+        <div class="col">
+          <div>2021 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Warung Pintar Intools</div>
+          <div class="desc">CMS for warungpintar.co.id</div>
+        </div>
+        <div class="col">
+          <div>2020 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Aplikasi Warung Pintar</div>
+          <div class="desc">Micro retail app for warungpintar.co.id</div>
+        </div>
+        <div class="col">
+          <div>2020 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Bizzy Marketplace</div>
+          <div class="desc">B2B Ecommerce v2 for bizzy.co.id</div>
+        </div>
+        <div class="col">
+          <div>2019 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Bizzy Backoffice</div>
+          <div class="desc">CMS for bizzy.co.id</div>
+        </div>
+        <div class="col">
+          <div>2018 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Bizzy Phoenix Website</div>
+          <div class="desc">B2B Ecommerce for bizzy.co.id</div>
+        </div>
+        <div class="col">
+          <div>2018 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Babyloania Manage</div>
+          <div class="desc">CMS for babyloania.com</div>
+        </div>
+        <div class="col">
+          <div>2016 | Full-time</div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="row">
+        <div class="col">
+          <div>Babyloania Storefront</div>
+          <div class="desc">Main website for babyloania.com</div>
+        </div>
+        <div class="col">
+          <div>2016 | Full-time</div>
+        </div>
       </div>
       <div class="divider"></div>
     </div>
