chore: remove gsap and update font

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="overlay-light"></div>
     <div id="overlay-dark"></div>
     <div class="content">
       <div class="nav row">
-        <div class="col"><a href="https://irxd.github.io">back to main site ⟶</a></div>
+        <div class="col">
+          <a href="https://irxd.github.io">
+            back to main site ↗
+          </a>
+        </div>
       </div>
       <div class="divider nav-divider"></div>
       <div class="row">
@@ -196,8 +199,5 @@
       <div class="divider"></div>
     </div>
   </body>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js">
-  </script>
   <script type="module" src="/main.js"></script>
 </html>
