fix: overflow height and adjust project type

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="overlay-dark"></div>
     <div class="content">
       <div class="nav row">
         <div class="col">
@@ -23,7 +22,8 @@
           <div class="desc">Learning blog bisafrontend.com</div>
         </div>
         <div class="col">
-          <div>2023 | Personal</div>
+          <div>2023</div>
+          <div class="desc">Personal</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -33,7 +33,8 @@
           <div class="desc">CMS for MSU certificate management</div>
         </div>
         <div class="col">
-          <div>2023 | Full-time</div>
+          <div>2023</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -43,7 +44,8 @@
           <div class="desc">CMS for OSK Holdings Malaysia</div>
         </div>
         <div class="col">
-          <div>2023 | Full-time</div>
+          <div>2023</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -53,7 +55,8 @@
           <div class="desc">E-learning app for MSU Malaysia Campus</div>
         </div>
         <div class="col">
-          <div>2023 | Full-time</div>
+          <div>2023</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -63,7 +66,8 @@
           <div class="desc">Compliance management system for paireds.com</div>
         </div>
         <div class="col">
-          <div>2023 | Freelance</div>
+          <div>2023</div>
+          <div class="desc">Freelance</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -73,7 +77,8 @@
           <div class="desc">CMS for suarapembaruan.com</div>
         </div>
         <div class="col">
-          <div>2023 | Freelance</div>
+          <div>2023</div>
+          <div class="desc">Freelance</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -83,7 +88,8 @@
           <div class="desc">News website for Linknet subsidiary</div>
         </div>
         <div class="col">
-          <div>2023 | Freelance</div>
+          <div>2023</div>
+          <div class="desc">Freelance</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -93,7 +99,8 @@
           <div class="desc">Dashboard for middleware service warungpintar.co.id</div>
         </div>
         <div class="col">
-          <div>2022 | Full-time</div>
+          <div>2022</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -103,7 +110,8 @@
           <div class="desc">React Native UI Kit for aplikasi warung pintar warungpintar.co.id</div>
         </div>
         <div class="col">
-          <div>2022 | Full-time</div>
+          <div>2022</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -113,7 +121,8 @@
           <div class="desc">PWA for trader sales warungpintar.co.id</div>
         </div>
         <div class="col">
-          <div>2021 | Full-time</div>
+          <div>2021</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -123,7 +132,8 @@
           <div class="desc">Marketing website for iklan pintar warungpintar.co.id</div>
         </div>
         <div class="col">
-          <div>2021 | Full-time</div>
+          <div>2021</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -133,7 +143,8 @@
           <div class="desc">CMS for warungpintar.co.id</div>
         </div>
         <div class="col">
-          <div>2020 | Full-time</div>
+          <div>2020</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -143,7 +154,8 @@
           <div class="desc">Micro retail app for warungpintar.co.id</div>
         </div>
         <div class="col">
-          <div>2020 | Full-time</div>
+          <div>2020</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -153,7 +165,8 @@
           <div class="desc">B2B Ecommerce v2 for bizzy.co.id</div>
         </div>
         <div class="col">
-          <div>2019 | Full-time</div>
+          <div>2019</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -163,7 +176,8 @@
           <div class="desc">CMS for bizzy.co.id</div>
         </div>
         <div class="col">
-          <div>2018 | Full-time</div>
+          <div>2018</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -173,7 +187,8 @@
           <div class="desc">B2B Ecommerce for bizzy.co.id</div>
         </div>
         <div class="col">
-          <div>2018 | Full-time</div>
+          <div>2018</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -183,7 +198,8 @@
           <div class="desc">CMS for babyloania.com</div>
         </div>
         <div class="col">
-          <div>2016 | Full-time</div>
+          <div>2016</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
@@ -193,7 +209,8 @@
           <div class="desc">Main website for babyloania.com</div>
         </div>
         <div class="col">
-          <div>2016 | Full-time</div>
+          <div>2016</div>
+          <div class="desc">Full-time</div>
         </div>
       </div>
       <div class="divider"></div>
